correcoes de string e number no response
