# src/swagger.json
@@ -25,7 +25,7 @@
     }
   },
   "paths": {
-    "/ativos/{codAtivo}": {
+    "/ativos": {
       "get": {
         "summary": "Get ativo",
         "description": "Get ativo",
@@ -34,23 +34,20 @@
           {
             "name": "codAtivo",
             "in": "query",
-            "description": "get codAtivo",
-            "required": true,
-            "type": "integer"
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
+
         "responses": {
           "200": {
             "description": "successful operation",
-            "schema": {
-              "type": "object",
-              "items": {
-                "$ref": "#/definitions/ativo"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/ativo"
+                }
               }
             }
           }
@@ -62,11 +59,12 @@
         "summary": "Criar Cliente",
         "description": "Criar cliente - retorna dados cliente",
         "produces": ["application/json"],
+        "consumes": ["application/json"],
         "parameters": [
           {
-            "name": "clienteData",
             "in": "body",
-            "description": "criar cliente com nome, email, senha.",
+            "name": "body",
+            "description": "cliente object",
             "schema": {
               "$ref": "#/definitions/cliente"
             }
@@ -174,7 +172,7 @@
         "nome": "fulano1",
         "senha": "$2a$08$486LWDJyZqEznxkr95SeHeczCck2/MBiAl2rWYoeBPmx1/Lj94idS",
         "email": "fulano1@gmail.com",
-        "saldo": "0"
+        "saldo": 0
       }
     },
     "login": {
